--- a/index.html
+++ b/index.html
@@ -59,9 +59,23 @@ document.getElementById('piscando').style.opacity = '0';
 <!---------------------------------------------------------------------------------------------------->
 <ol>
 <!---------------------------------------------------------------------------------------------------->
+<!-----------------------------------------LISTA IPTV---------------------------------------------->
+<p><li><a href="#LISTA TV IPTV"><h3>LISTA TV IPTV</h3></a></li></p>
+<!---------------------------------------------------------------------------------------------------->
+<p><li><a href="#LISTA FILME IPTV"><h3>LISTA FILME IPTV</h3></a></li></p>
+<!---------------------------------------------------------------------------------------------------->
+<p><li><a href="#LISTA VIDEOS IPTV"><h3>LISTA VIDEOS IPTV</h3></a></li></p>
+<!---------------------------------------------------------------------------------------------------->
+<p><li><a href="#NOME🔴"><h3>NOME🔴</h3></a></li></p>
+
+
+
+<!---------------------------------------------------------------------------------------------------->
 <p><li><a href="#BAIXE O APK PARA CEL"><h3>BAIXE O APK PARA CEL (PlaylisTV me.targa.iptvbr) PARA CELULAR <img src="https://image.winudf.com/v2/image/bWUudGFyZ2EuaXB0dmJyX2ljb25fczFzdWFybG0/icon.png?fakeurl=1&h=240&type=webp" width="70"></h3></a></li></p>
 <!---------------------------------------------------------------------------------------------------->
-</p><p><li><a href="#NOME🔴"><h3>NOME🔴</h3></a></li></p></p>
+</p><p><li><a href="#VLC PARA CUMPUTADOR"><h3>VLC PARA CUMPUTADOR<img src="https://img.ibxk.com.br/2019/02/13/13181540984246.jpg" width="70"></h3></a></li></p></p>
+<!---------------------------------------------------------------------------------------------------->
+<p><li><a href="#NOME🔴"><h3>NOME🔴</h3></a></li></p>
 <!---------------------------------------------------------------------------------------------------->
 <p><li><a href="#NOME🔴"><h3>NOME🔴</h3></a></li></p>
 <!---------------------------------------------------------------------------------------------------->
@@ -95,23 +109,54 @@ SOLUÇÃO
 
 <!---------------------------------------------------------------------------------------------------->
 <ul>
+<!--------------------------------------------LISTA IPTV----------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="LISTA TV IPTV"><h3>LISTA TV IPTV</a><a href="
+LINK TV IPTV.html
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="LISTA FILME IPTV"><h3>LISTA FILME IPTV</a><a href="
+LINK FILMES IPTV.html
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="LISTA VIDEOS IPTV"><h3>LISTA VIDEOS IPTV</a><a href="
+LINK VIDEOS IPTV.html
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
+LINK🔴
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+
+
+
+
+
+
 <!---------------------------------------------------------------------------------------------------->
 </p><p><li><a name="BAIXE O APK PARA CEL"><h3>BAIXE O APK PARA CEL</a><a href="
 PlaylisTV_me.targa.iptvbr (1).apk
 " target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</b></FONT></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
 <!---------------------------------------------------------------------------------------------------->
-</p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
-LINK🔴
-" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUIT</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+</p><p><li><a name="VLC PARA CUMPUTADOR"><h3>VLC PARA CUMPUTADOR</a><a href="
+vlc-3.0.17.4-win32.exe
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
 <!---------------------------------------------------------------------------------------------------->
 </p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
 LINK🔴
-" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUIT</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
 <!---------------------------------------------------------------------------------------------------->
 </p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
 LINK🔴
-" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUIT</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
+LINK🔴
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
+LINK🔴
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
 <!---------------------------------------------------------------------------------------------------->
 
 
