--- a/LINK TV IPTV.html
+++ b/LINK TV IPTV.html
@@ -1,41 +1,27 @@
-﻿
-                                          COPIE O LINK A BAIXO E COLE NO SEU IPTV
-
-
-           https://raw.githubusercontent.com/santos246/MEUS-IPTV/main/TV%20IPTV.m3u
-
-
-
-
+﻿<center><FONT COLOR="red"><p><FONT SIZE=+4> 
+COPIE O LINK A BAIXO E COLE NO SEU IPTV
+</p> <br/>  </center></FONT>
+<FONT SIZE=+3> <FONT COLOR="#rrggbb">
+<HR NOSHADE SIZE="3" color="red">
+<HR NOSHADE SIZE="5" color="#00ff00">
 
 
 
+https://raw.githubusercontent.com/santos246/MEUS-IPTV/main/TV%20IPTV.m3u
 
 
 
+</FONT></FONT>
+
+<HR NOSHADE SIZE="3" color="red">
+<HR NOSHADE SIZE="5" color="#00ff00"
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<P><center>
+<a href="
+https://raw.githubusercontent.com/santos246/MEUS-IPTV/main/TV%20IPTV.m3u
+" target="_blank"><FONT COLOR="#04B404"><b>VEJA NO GITHUB</FONT></b></a>
+</center></P>
 
 
 
