--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@ document.getElementById('piscando').style.opacity = '0';
 <p><li><a href="#LISTA VIDEOS IPTV"><h3>LISTA VIDEOS IPTV</h3></a></li></p>
 <!---------------------------------------------------------------------------------------------------->
 <p><li><a href="#NOME🔴"><h3>NOME🔴</h3></a></li></p>
+<!---------------------------------------------------------------------------------------------------->
+<p><li><a href="#NOME🔴"><h3>NOME🔴</h3></a></li></p>
+<!---------------------------------------------------------------------------------------------------->
+<p><li><a href="#EXEMPLO DO CÓDIGO IPTV"><h3>EXEMPLO DO CÓDIGO IPTV</h3></a></li></p>
+<!---------------------------------------------------------------------------------------------------->
 
+
+
+<HR NOSHADE SIZE="1" color="#00ff00">
 
 
 <!---------------------------------------------------------------------------------------------------->
@@ -128,7 +136,25 @@ LINK🔴
 " target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
 <!---------------------------------------------------------------------------------------------------->
 
+</p><p><li><a name="EXEMPLO DO CÓDIGO IPTV"><h3>EXEMPLO DO CÓDIGO IPTV</a><a href="
+EXEMPLO DO CÓDIGO IPTV.html
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
+LINK🔴
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
+</p><p><li><a name="NOME🔴"><h3>NOME🔴</a><a href="
+LINK🔴
+" target="_blank"><FONT COLOR="#rrggbb"><b> CLICANDO AQUI</FONT></b></a></h3><a href="#top"><h6>VOLTAR AO TOPO</h6></a></li></p><HR NOSHADE SIZE="5" color="#00ff00"></p>
+<!---------------------------------------------------------------------------------------------------->
 
+
+
+
+
+
+<HR NOSHADE SIZE="1" color="#00ff00">
 
 
 
