--- a/EXEMPLO DO CÓDIGO IPTV.html
+++ b/EXEMPLO DO CÓDIGO IPTV.html
@@ -11,11 +11,17 @@ LINK🔴<BR/><BR/>
 
 
 EXEMPLO 3:
+#EXTM3U
+
+#EXTINF:0,https://5cf4a2c2512a2.streamlock.net/rbtv/rbtv/chunklist_w700662972.m3u8
+
+
 <BR/><BR/>
 
 
 
 EXEMPLO 4:
+
 <BR/><BR/>
 
 
