--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ document.getElementById('piscando').style.opacity = '0';
 }};
 </script><HR NOSHADE SIZE="5" color="#00ff00">
 <!---------------------------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------------------------->
+<!---------------------FAIXA AZUL----------------------->  
+<a href="https://santos246.github.io/INICIO/" target="_self">
+<div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+2>INÍCIO</FONT></p></div></a>
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
